# Gazebo-Map-Actor-Plugin

./: README.md
actor_move/: CMakeLists.txt  MapActorPlugin.cc  MapActorPlugin.hh
actor_pos_publish/: CMakeLists.txt  package.xml
actor_pos_publish/gazebo_world/: package.xml
actor_pos_publish/gazebo_world/world/: office02_dynamic_map.world
actor_pos_publish/launch/: office02_dynamic_map.launch  rviz_navigation.rviz
actor_pos_publish/params/: global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
actor_pos_publish/src/: A_star.cpp  actor_pos_publish_node.cpp  actor_pos_publish_node.h  plan_utils.cpp  plan_utils.h
gazebo_world/world/: office02_dynamic_map.world
p3dx/: LICENSE  README.md
p3dx/p3dx_description/launch/: description.launch
p3dx/p3dx_description/urdf/p3dx/: pioneer3dx.xacro
p3dx/p3dx_description/urdf/sensors/: hokuyo_utm30lx.urdf.xacro
p3dx/p3dx_gazebo/launch/: p3dx_gazebo.launch
